welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: illegal start of simple pattern
	case if(litMessage()=="R") => println("droite(),avance();")
             ^BDR2:5: error: '=>' expected but ';' found.
	case if(litMessage()=="L") =>  println("gauche(),avance();")
^BDR2:5: error: illegal start of simple pattern
	case if(litMessage()=="L") =>  println("gauche(),avance();")
             ^BDR2:6: error: '=>' expected but ';' found.
	case if(litMessage()=="I") =>  println("retourne(),avance();")
^BDR2:6: error: illegal start of simple pattern
	case if(litMessage()=="I") =>  println("retourne(),avance();")
             ^BDR2:7: error: '=>' expected but ';' found.
	case if(litMessage()=="A") =>  println("avance();")
^BDR2:7: error: illegal start of simple pattern
	case if(litMessage()=="A") =>  println("avance();")
             ^BDR2:8: error: '=>' expected but ';' found.
	case if(litMessage()=="B") =>  println("avance(),avance();")
^BDR2:8: error: illegal start of simple pattern
	case if(litMessage()=="B") =>  println("avance(),avance();")
             ^BDR2:9: error: '=>' expected but ';' found.
	case if(litMessage()=="C") =>  println("avance(),avance(),avance();")
^BDR2:9: error: illegal start of simple pattern
	case if(litMessage()=="C") =>  println("avance(),avance(),avance();")
             ^BDR2:10: error: '=>' expected but ';' found.
	case if(litMessage()=="D") =>  println("avance(),avance(),avance(),avance();")
^BDR2:10: error: illegal start of simple pattern
	case if(litMessage()=="D") =>  println("avance(),avance(),avance(),avance();")
             ^BDR2:11: error: '=>' expected but ';' found.
	case if(litMessage()=="E") =>  println("avance(),avance(),avance(),avance(),avance();") 
^BDR2:11: error: illegal start of simple pattern
	case if(litMessage()=="E") =>  println("avance(),avance(),avance(),avance(),avance();") 
             ^BDR2:12: error: '=>' expected but ';' found.
	case if(litMessage()=="F") =>  println("avance(),avance(),avance(),avance(),avance() ;")
^BDR2:12: error: illegal start of simple pattern
	case if(litMessage()=="F") =>  println("avance(),avance(),avance(),avance(),avance() ;")
             ^BDR2:13: error: '=>' expected but ';' found.
	case if(litMessage()=="Z") =>  println("recule();")
^BDR2:13: error: illegal start of simple pattern
	case if(litMessage()=="Z") =>  println("recule();")
             ^BDR2:14: error: '=>' expected but ';' found.
	case if(litMessage()=="Y") =>  println("recule(),recule();")
^BDR2:14: error: illegal start of simple pattern
	case if(litMessage()=="Y") =>  println("recule(),recule();")
             ^BDR2:15: error: '=>' expected but ';' found.
	case if(litMessage()=="X") =>  println("recule(),recule(),recule();")
^BDR2:15: error: illegal start of simple pattern
	case if(litMessage()=="X") =>  println("recule(),recule(),recule();")
             ^BDR2:16: error: '=>' expected but ';' found.
	case if(litMessage()=="W") =>  println("recule(),recule(),recule(),recule();")
^BDR2:16: error: illegal start of simple pattern
	case if(litMessage()=="W") =>  println("recule(),recule(),recule(),recule();")
             ^BDR2:17: error: '=>' expected but ';' found.
	case if(litMessage()=="V") =>  println("recule(),recule(),recule(),recule(),recule();")
^BDR2:17: error: illegal start of simple pattern
	case if(litMessage()=="V") =>  println("recule(),recule(),recule(),recule(),recule();")
             ^BDR2:18: error: '=>' expected but ';' found.
	case if(litMessage()=="U") =>  println("recule(),recule(),recule(),recule(),recule(),recule();")
^BDR2:18: error: illegal start of simple pattern
	case if(litMessage()=="U") =>  println("recule(),recule(),recule(),recule(),recule(),recule();")
             ^BDR2:19: error: '=>' expected but ';' found.
	case _  => false 
^